# geometamaker

./: 01_template_required_properties.yml  02_sample_raster_autopopulated.yml  02_sample_vector_autopopulated.yml  03_sample_raster_fullypopulated.yml  03_sample_vector_fullypopulated.yml  HISTORY.rst  LICENSE  README.md  make_mcf.py  pyproject.toml  requirements.txt
.github/workflows/: build-py-dists.yml  test.yml
docs/: environment-rtd.yml
docs/source/: archive_resource.rst  basic_usage.rst  collection_resource.rst  conf.py  index.rst  installation.rst  metadata_resources.rst  profile.rst  raster_resource.rst  table_resource.rst  vector_resource.rst
pygeometadata/: mcf.py
src/geometamaker/: __init__.py  cli.py  config.py  geometamaker.py  mcf.py  models.py  utils.py
src/pygeometadata/: mcf.py
tests/: test_geometamaker.py  test_mcf.py  test_migrations.py
tests/data/: template.yml
tests/data/0.1.2/: vector.geojson  vector.geojson.yml
