[project]
name = "geometamaker"
description = "metadata creation for geospatial data"
readme = "README.md"
requires-python = ">=3.8,<3.13"
license = {file = "LICENSE.txt"}
maintainers = [
    {name = "Natural Capital Project Software Team"}
]
keywords = ["gis", "geospatial", "metadata"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: GIS"
]
# the version is provided dynamically by setuptools_scm
# `dependencies` and `optional-dependencies` are provided by setuptools
# using the corresponding setup args `install_requires` and `extras_require`
dynamic = ["version", "dependencies", "optional-dependencies"]

[build-system]
requires = ["setuptools >= 40.6.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
